--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeira Pagina Web</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>GABRIEL</h1>
 <img src="lua.jpeg" alt="iamgem da lua">
+
 
 
 
