--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeira Pagina Web</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+<header class="cabecalho">
+
+</header>
+
+
+
+
+
+
     <h1>GABRIEL</h1>
-<img src="lua.jpeg" alt="iamgem da lua">
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. A, architecto fugit tempora vitae amet dolor impedit,
+        aspernatur corporis recusandae ex, id ipsum nihil debitis. Sunt a dicta rerum nobis illum.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum perferendis fugit assumenda dignissimos iste.
+        In commodi architecto possimus neque reprehenderit sed quae dolor, itaque consectetur? Ducimus incidunt omnis
+        explicabo! Labore.
+    </p>
+    <img src="lua.jpeg" alt="iamgem da lua">
 
 
 
 
 </body>
+
 </html>
