--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-<header class="cabecalho">
+    <header class="cabecalho">
 
-</header>
+    </header>
 
 
 
@@ -20,13 +20,16 @@
 
     <h1>GABRIEL</h1>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. A, architecto fugit tempora vitae amet dolor impedit,
-        aspernatur corporis recusandae ex, id ipsum nihil debitis. Sunt a dicta rerum nobis illum.
+        A relação da Terra com a lua tem bilhões de anos e, graças ao satélite, o planeta tem um clima que permite a
+        existência de vida e dos humanos
+
+
     </p>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum perferendis fugit assumenda dignissimos iste.
-        In commodi architecto possimus neque reprehenderit sed quae dolor, itaque consectetur? Ducimus incidunt omnis
-        explicabo! Labore.
+        O mesmo não pode ser dito do satélite natural: as condições climáticas da lua são grandes impeditivos para uma
+        eventual colonização, ao contrário do que algumas produções de ficção científica fazem parecer.
+
+
     </p>
     <img src="lua.jpeg" alt="iamgem da lua">
 
