--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     </header>
 
 <section class="primeirasecao">
-    
+  <div class="divisao">
+
+  </div>  
+  <dir class="divisao">
+
+  </dir>
+
 </section>
 
 
