--- a/index.html
+++ b/index.html
@@ -13,15 +13,20 @@
 
     </header>
 
-<section class="primeirasecao">
-  <div class="divisao">
+    <section class="primeirasecao">
 
-  </div>  
-  <div class="divisao">
+        <div class="divisao">
+            <p> Acredita-se que a lua tenha 4,5 bilhões de anos, com sua origem a partir do impacto entre a Terra e um
+                planeta em formação (também chamado de protoplaneta) do tamanho de Marte. Esse impacto fez com que
+                diferentes detritos passassem a orbitar o nosso planeta e, ao longo do tempo, se acumularam até dar
+                origem à lua.</p>
+        </div>
 
-  </div>
+        <div class="divisao">
 
-</section>
+        </div>
+
+    </section>
 
 
 
