--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
         </div>
 
         <div class="divisao">
-
+            <p> A alta e baixa das marés a cada 12 horas é resultado da gravidade da lua, que atrai a água na porção
+                terrestre que fica de frente para o satélite. Isso faz com que o nível das águas suba e desça, conforme
+                o movimento da lua ao redor da Terra. Esse mesmo movimento desacelera a rotação da Terra e faz os dias
+                ficarem 0,002 segundos mais longos a cada 100 anos.</p>
         </div>
 
     </section>
